--- a/graphee/default/data/ui/views/doc_app_intro.xml
+++ b/graphee/default/data/ui/views/doc_app_intro.xml
@@ -1,17 +1,15 @@
 <dashboard version="1.1">
   <label>Intro</label>
-  <row>
-    <html>
-      <h1>Disclaimer</h1>
-      <p>This app comes without any warranty. It is currently at an early development stage. Check the code before you run it. Use at your own risk.</p>
-    </html>
-  </row>
+
   <row>
     <html>
       <h1>General Information</h1>
+      <p>A Neo4j(r) connector for Splunk(r) (using Cypher)</p>
+      <p>Persist your Splunk data into Neo4j graphs, query your Neo4j data from Splunk and execute custom cypher commands from Splunk SPL. All work on Neo4j is done via Cypher using the Neo4j Python driver.</p>
       <p>Please refer to <a href="https://github.com/Bamfax/graphee">GRAPH-E on Github</a> for further information.</p>
     </html>
   </row>
+
   <row>
     <panel>
       <html>
@@ -24,8 +22,8 @@
         <p>Configure everything on the <a href="configuration" target="_blank">configuration page</a> to get this app ready.</p>
         <ol>
           <li>Point the app towards your Neo4j instance(s) via the configuration page "Neo4j URIs". You may want to use "bolt+ssc://" as URI scheme if your Neo4j instance uses self-signed certificates. See <a href="https://neo4j.com/docs/bolt/current/driver-api/#uri-schemes" target="_blank">Neo4j URI schemes</a> for further information.</li>
-          <li>Enter your Neo4j Accounts to login to your configured Neo4j instances via the configuration page "Neo4j Accounts". The default account name on Neo4j Desktop is "neo4j".</li>
-          <li>You can configure multiple URIs and Accounts. Each custom commands allows to specify which URI and account to use.</li>
+          <li>Enter your Neo4j Accounts to login to your Neo4j instance(s) via the configuration page "Neo4j Accounts". (The default account name after installation of Neo4j is usually "neo4j".)</li>
+          <li>You can configure multiple URIs and Accounts. The specific URI and account to be used by a custom commands can be set as input parameter.</li>
         </ol>
       </html>
     </panel>
@@ -33,15 +31,37 @@
 
   <row>
     <html>
-      <h1>References and Kudos</h1>
-      <p>Tbd</p>
+      <h1>Further Splunk Graph Apps</h1>
+      <p>Be sure to check these Splunk Apps out, as they bring even more Graph functionality into Splunk:</p>
+      <ul>
+        <li><b>3D Graph Network Topology Visualization</b></li> 
+          <ul>
+            <li><a href="https://github.com/splunk/splunk-3D-graph-network-topology-viz" target="_blank">https://github.com/splunk/splunk-3D-graph-network-topology-viz</a></li>
+            <li><a href="https://splunkbase.splunk.com/app/4611" target="_blank">https://splunkbase.splunk.com/app/4611</a></li>
+            <li> Awesome, large scale, GPU-accelerated Graph Visualization</li> 
+            <li> Also includes NetworkX bindings (bundled in Slunk PSC)</li> 
+            <li> Based upon the awesome underlying library <a href="https://github.com/vasturiano/3d-force-graph" target="_blank">https://github.com/vasturiano/3d-force-graph</a></li> 
+          </ul>
+        <li><b>Python for Scientific Computing (PSC)</b></li> 
+          <ul>
+            <li><a href="https://github.com/splunk/Splunk-python-for-scientific-computing" target="_blank">https://github.com/splunk/Splunk-python-for-scientific-computing</a></li>
+            <li><a href="https://splunkbase.splunk.com/app/2882/" target="_blank">https://splunkbase.splunk.com/app/2882/</a></li>
+            <li> Contains NetworkX library and allows binding to it (via interface API)</li> 
+          </ul>
+        <li><b>Graphviz:</b></li> 
+          <ul>
+            <li><a href="https://github.com/ThomasDancoisne/SA-Graphviz" target="_blank">https://github.com/ThomasDancoisne/SA-Graphviz</a></li> 
+            <li><a href="https://splunkbase.splunk.com/app/4346" target="_blank">https://splunkbase.splunk.com/app/4346</a></li>
+            <li>Very customizable and interactable Graph Visualization</li> 
+          </ul>
+      </ul>
     </html>
   </row>
 
   <row>
     <html>
-      <h1>Related apps</h1>
-      <p>Tbd</p>
+      <h1>Disclaimer</h1>
+      <p>This app comes is currently in an early development stage. It is recommended to check the code beforehand and to run it in a dev environment first.</p>
     </html>
   </row>
 
