--- a/graphee/default/data/ui/views/doc_challenges_and_solutions.xml
+++ b/graphee/default/data/ui/views/doc_challenges_and_solutions.xml
@@ -9,13 +9,13 @@
     <panel>
       <html>
         <div class="challengedemo01_primer">
-          <p>A common challenge is that datasets come as list of neighbor pairs. A firewall logs (as in the demo below) is a typical example of such a graph representation: It describes a connection by giving source, destination and metadata. This triple can also be understood as three objects. A graph on the other hand consists of nodes and links. Trying to built a graph from lists of neighbor pairs is suboptimal. The main issue is that neighbor lists introduce redundancies. A unique node (e.g. a source when thinking of firewall logs) will most likely show multiple times in the firewall log. Keeping those multiple occurences in sync and identical across all SPL transformations is hard and most often not maintainable.</p>
+          <p>A common challenge is that datasets come as list of neighbor pairs. A firewall logs (as in the demo below) is a typical example of such a graph representation: It describes a connection by giving source, destination and metadata. This triple can also be understood as three respective objects: source, destination and relationship. A graph on the other hand consists of nodes and links. Trying to built a graph from lists of neighbor pairs is suboptimal. The main issue is that neighbor lists introduce redundancies: A unique node will be referenced multiple times and thus have duplicates (e.g. a firewall logs where a single source opens multiple connections) . Keeping those multiple occurences in sync and identical across all SPL transformations in its way to the final graph input is hard and most often not maintainable.</p>
           <p>This can be solved by representing a graph with a flat nodes and rels list. This representation is used as input into the graph creation custom commands of this app.</p>
           <p>But how can a list of neighbor pairs be transformed into a nodes and rels list, using SPL?</p>
           <p>The following describes a possible approach to achieve this. It has two main steps: Creating Json objects and expanding those, giving each its own event:</p>
           <ol>
-            <li>Understand the neighbor pair as the objects which it is made of.</li>
-            <li>Create a json representation of these objects using |tojson. This will ease their future SPL handling. In the case of firewall logs those would be three objects: source, destination and connection.</li>
+            <li>Understand the neighbor pair as the three objects which it is made of: source, destination and relationship</li>
+            <li>Create a json representation of these objects using |tojson or |eval source=json_object(...). This will ease their future SPL handling. In the case of firewall logs those would be three objects: source, destination and connection.</li>
             <li>These objects are now defined and clearly separated, but they are still on the same line (or event). Expand the lines now using |stats, so that each object comes on its own line/event. </li>
             <li>Following these steps, the original list is successfully transformed into a representation more suitable for graphing. Please see the below demo for details.</li>
           </ol>
@@ -159,4 +159,4 @@
   </row>
 
 
-</form> 
+</form>
