--- a/graphee/default/data/ui/views/doc_commands.xml
+++ b/graphee/default/data/ui/views/doc_commands.xml
@@ -15,11 +15,6 @@
       <p>| creategraph uri=&lt;my_uri_id&gt; account=&lt;my_account_id&gt; noact=&lt;true|false&gt; mode=&lt;create|merge&gt;</p>
       <p>Type: Reporting Command</p>
       <p>Use: Creates a graph on the Neo4j instance by transforming the input events, transforming and sending them to the graph db. Takes a set of multiple fields as input to create the nodes and relationsships as a graph.</p>
-      <p>Further info: This command does not yet support:</p>
-      <ul>
-        <li>Multiple labels on a node.</li>
-        <li>Multivalue inputs on other fields.</li>
-      </ul>
       <h3>
         <b>Options:</b>
       </h3>
@@ -27,9 +22,15 @@
         <li>
           <b>mode:</b>
         </li>
-        <p>Syntax: mode=&lt;"MERGE"|"CREATE"&gt;</p>
+        <p>Syntax: mode=&lt;"merge"|"create"&gt;</p>
         <p>Description: Cypher command with which the nodes and/or relationsships are being created. Choose between "merge" and "create".</p>
         <p>Default is "merge".</p>
+        <li>
+          <b>propsprefix:</b>
+        </li>
+        <p>Syntax: propsprefix=&lt;properties_prefix&gt;</p>
+        <p>Description: Selector for the properties fields. Choose which fields are taken/read from the inputfield by prepending their names with this prefix. This prefix is then removed from the fieldname in the graph.</p>
+        <p>Default is "p_".</p>
       </ul>
     </html>
     <html>
@@ -46,9 +47,21 @@
         <li>
           <b>mode:</b>
         </li>
-        <p>Syntax: mode=&lt;"MERGE"|"CREATE"&gt;</p>
+        <p>Syntax: mode=&lt;"merge"|"create"&gt;</p>
         <p>Description: Cypher command with which the nodes and/or relationsships are being created. Choose between "merge" and "create".</p>
         <p>Default is "merge".</p>
+        <li>
+          <b>inputfield:</b>
+        </li>
+        <p>Syntax: inputfield=&lt;inputfield&gt;</p>
+        <p>Description: Name of the field which is taken as inputfield.</p>
+        <p>Default is "json_obj".</p>
+        <li>
+          <b>propsprefix:</b>
+        </li>
+        <p>Syntax: propsprefix=&lt;properties_prefix&gt;</p>
+        <p>Description: Selector for the properties fields. Choose which fields are taken/read from the inputfield by prepending their names with this prefix. This prefix is then removed from the fieldname in the graph.</p>
+        <p>Default is "p_".</p>
       </ul>
     </html>
   </row>
@@ -122,11 +135,11 @@
       <h1>A word on creating graphs</h1>
       <ul>
         <li>Please note the difference in meaning between node_ref and node_id. The former is the required field for referencing nodes in the input dataset when creating graphs. It has no other function as uniquely referencing nodes in the building the cypher commands that create the graph. It is not persistent and vanishes after the graph was created. The latter is returned by graph queries: It is the ID neo4j assigns to stored nodes and rels.</li>
-        <li>Variables like node_ref are fed to Neo4j and need to follow Neo4j conventions. node_ref therefore needs to start with an alphabetic char. See <a href="https://neo4j.com/docs/cypher-manual/current/syntax/naming/" target="_blank">Cypher naming conventions</a> for more info.</li>
-        <li>These fields need to be present for creating nodes: obj_type="node", node_ref, node_label. Props are optional. They need to be prefixed with "prop:", the remainder is used as propname in neo4j.</li>
-        <li>These fields need to be present for creating rels: obj_type="rel", rel_type, rel_dst_node [as in node_ref], rel_src_node [as in node_ref]. Props are optional. They need to be prefixed with "prop:", the remainder is used as propname in neo4j.</li>
+        <li>Variables like node_ref are fed to Neo4j and need to follow Neo4j conventions. node_ref is a name type in cypher and therefore needs to start with an alphabetic char. See <a href="https://neo4j.com/docs/cypher-manual/current/syntax/naming/" target="_blank">Cypher naming conventions</a> for more info.</li>
+        <li>These fields need to be present for creating nodes: obj_type="node", node_ref, node_label. Props are optional.</li>
+        <li>These fields need to be present for creating rels: obj_type="rel", rel_type, rel_dst_node [as in node_ref], rel_src_node [as in node_ref]. Props are optional.</li>
         <li>Ensure that nodes are created before rels (by sorting nodes to the top). The creategraph commands only succeed if the rel_src_node and rel_dst_node are already present on rel creation.</li>
-        <li>|creategraphjson needs the input objs to be delivered in the field json_obj.</li>
+        <li>Please be aware that graph objects only allow storing of non-fancy data types. See <a href="https://neo4j.com/docs/cypher-manual/current/syntax/values/" target="_blank">Cypher Values and types</a> for more info.</li>
         <li>Speed of the commands are not in focus yet. Expect creation of larger graphs to take a while. You may want to adjust the timeout in commands.conf.</li>
       </ul>
     </html>
